--- a/style_dashboard/style.scss
+++ b/style_dashboard/style.scss
@@ -4,6 +4,7 @@ $courclass_green: #8ddc97;
 $dark-green: #1f7a54;
 $dark-grey: #666666;
 $light_grey: #c7c7c7;
+$noti_badge_blue: #2a7ff3;
 
 @mixin flexCenter() {
   display: flex;
@@ -14,7 +15,6 @@ $light_grey: #c7c7c7;
 #body {
   background-color: #eeeeee;
   font-family: "Quicksand";
-  min-height: 900px;
 }
 
 .bold {
@@ -38,6 +38,7 @@ $light_grey: #c7c7c7;
   @include flexCenter();
   list-style: none;
   margin-bottom: 0px;
+  margin-left: auto;
 }
 
 .nav-each-btn {
@@ -45,11 +46,81 @@ $light_grey: #c7c7c7;
   color: $header_green;
   font-family: "Quicksand";
   text-transform: uppercase;
+  text-decoration: none;
+}
+
+.indicators {
+  @include flexCenter();
+  position: absolute;
+  top: 0%;
+  right: 0%;
+  left: 60%;
+  bottom: 60%;
+  width: 12px;
+  height: 12px;
+  background-color: $noti_badge_blue;
+  border-radius: 10px;
+}
+
+.noti_count {
+  font-size: 10px;
+  color: white;
+}
+
+#nav-div1 {
+  height: 22px;
+  width: 22px;
+  border: 1px solid transparent;
+  border-radius: 50%;
+  background-image: url(/icons/alerts.svg);
+  background-size: cover;
+  background-position: right;
+  position: relative;
+  div {
+    left: 52%;
+    bottom: 60%;
+  }
+}
+
+#nav-div2 {
+  height: 22px;
+  width: 22px;
+  border: 1px solid transparent;
+  border-radius: 50%;
+  background-image: url(/icons/announcements.svg);
+  background-size: cover;
+  background-position: right;
+  position: relative;
+  div {
+    left: 80%;
+    top: -6%;
+  }
+}
+
+#nav-div3 {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  border: 1px solid $header_green;
+  border-radius: 50%;
+  background-image: url("/images/imageMask-1.svg");
+  background-size: cover;
+  background-position: right;
+  position: relative;
+  div {
+    left: 70%;
+    background-color: white;
+    div {
+      font-size: 8px;
+      color: black;
+    }
+  }
 }
 
 .nav-img {
   width: 21px;
   height: 24px;
+  z-index: 1;
 }
 
 #nav-btn1 {
@@ -57,11 +128,8 @@ $light_grey: #c7c7c7;
   border-bottom: 2px solid white;
 }
 
-#account_img {
-  width: 32px;
-  height: 32px;
-  border: 1px solid $header_green;
-  border-radius: 50px;
+#hambur {
+  display: none;
 }
 
 .select {
@@ -330,4 +398,25 @@ $light_grey: #c7c7c7;
   margin-left: 8px;
   margin-right: 11px;
   font-weight: bolder;
+}
+
+// Media querries
+
+@media (max-width: 1000px) {
+  #hambur {
+    display: block;
+  }
+  #nav-btn {
+    display: none;
+  }
+
+  .summary {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .course-card {
+    display: flex;
+    flex-direction: column;
+  }
 }
