--- a/style_dashboard/style.css
+++ b/style_dashboard/style.css
@@ -1,4 +1,28 @@
 /*# sourceMappingURL=style.css.map */
+@font-face {
+  font-family: "Quicksand";
+  font-style: normal;
+  font-weight: 100 900;
+  src: url("../Quicksand font 1/static/Quicksand-Medium.ttf");
+}
+@font-face {
+  font-family: "Quicksand-bold";
+  font-style: normal;
+  font-weight: 100 900;
+  src: url("../Quicksand font 1/static/Quicksand-Bold.ttf");
+}
+@font-face {
+  font-family: "Quicksand-semibold";
+  font-style: normal;
+  font-weight: 100 900;
+  src: url("../Quicksand font 1/static/Quicksand-SemiBold.ttf");
+}
+@font-face {
+  font-family: "Quicksand-bold";
+  font-style: normal;
+  font-weight: 100 900;
+  src: url("../Quicksand font 1/static/Quicksand-Bold.ttf");
+}
 #body {
   background-color: #eeeeee;
   font-family: "Quicksand";
@@ -9,7 +33,7 @@
 }
 
 #navbar {
-  background-image: url(/header\ pattern\ image.png);
+  background-image: url(../header\ pattern\ image.png);
 }
 
 #nav-bulb {
@@ -62,7 +86,7 @@
   width: 22px;
   border: 1px solid transparent;
   border-radius: 50%;
-  background-image: url(/icons/alerts.svg);
+  background-image: url(../icons/alerts.svg);
   background-size: cover;
   background-position: right;
   position: relative;
@@ -77,7 +101,7 @@
   width: 22px;
   border: 1px solid transparent;
   border-radius: 50%;
-  background-image: url(/icons/announcements.svg);
+  background-image: url(../icons/announcements.svg);
   background-size: cover;
   background-position: right;
   position: relative;
@@ -93,7 +117,7 @@
   border-radius: 50%;
   border: 1px solid #3fd28b;
   border-radius: 50%;
-  background-image: url("/images/imageMask-1.svg");
+  background-image: url("../images/imageMask-1.svg");
   background-size: cover;
   background-position: right;
   position: relative;
@@ -123,7 +147,7 @@
 }
 
 .select {
-  background-image: url("/icons/arrow-down.svg");
+  background-image: url("../icons/arrow-down.svg");
   background-repeat: no-repeat;
   background-position: 100% center;
   background-color: #eeeeee;
@@ -228,8 +252,8 @@
 
 .course-card {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: repeat(auto-fill, minmax(600px, 1fr));
+  grid-auto-rows: 300px;
   grid-gap: 24px;
   margin: 24px;
 }
