--- a/style_dashboard/style.scss
+++ b/style_dashboard/style.scss
@@ -6,6 +6,31 @@ $dark-grey: #666666;
 $light_grey: #c7c7c7;
 $noti_badge_blue: #2a7ff3;
 
+@font-face {
+  font-family: "Quicksand";
+  font-style: normal;
+  font-weight: 100 900;
+  src: url("../Quicksand font 1/static/Quicksand-Medium.ttf");
+}
+@font-face {
+  font-family: "Quicksand-bold";
+  font-style: normal;
+  font-weight: 100 900;
+  src: url("../Quicksand font 1/static/Quicksand-Bold.ttf");
+}
+@font-face {
+  font-family: "Quicksand-semibold";
+  font-style: normal;
+  font-weight: 100 900;
+  src: url("../Quicksand font 1/static/Quicksand-SemiBold.ttf");
+}
+@font-face {
+  font-family: "Quicksand-bold";
+  font-style: normal;
+  font-weight: 100 900;
+  src: url("../Quicksand font 1/static/Quicksand-Bold.ttf");
+}
+
 @mixin flexCenter() {
   display: flex;
   justify-content: center;
@@ -22,7 +47,7 @@ $noti_badge_blue: #2a7ff3;
 }
 
 #navbar {
-  background-image: url(/header\ pattern\ image.png);
+  background-image: url(../header\ pattern\ image.png);
 }
 
 #nav-bulb {
@@ -72,7 +97,7 @@ $noti_badge_blue: #2a7ff3;
   width: 22px;
   border: 1px solid transparent;
   border-radius: 50%;
-  background-image: url(/icons/alerts.svg);
+  background-image: url(../icons/alerts.svg);
   background-size: cover;
   background-position: right;
   position: relative;
@@ -87,7 +112,7 @@ $noti_badge_blue: #2a7ff3;
   width: 22px;
   border: 1px solid transparent;
   border-radius: 50%;
-  background-image: url(/icons/announcements.svg);
+  background-image: url(../icons/announcements.svg);
   background-size: cover;
   background-position: right;
   position: relative;
@@ -103,7 +128,7 @@ $noti_badge_blue: #2a7ff3;
   border-radius: 50%;
   border: 1px solid $header_green;
   border-radius: 50%;
-  background-image: url("/images/imageMask-1.svg");
+  background-image: url("../images/imageMask-1.svg");
   background-size: cover;
   background-position: right;
   position: relative;
@@ -133,7 +158,7 @@ $noti_badge_blue: #2a7ff3;
 }
 
 .select {
-  background-image: url("/icons/arrow-down.svg");
+  background-image: url("../icons/arrow-down.svg");
   background-repeat: no-repeat;
   background-position: 100% center;
   background-color: #eeeeee;
@@ -237,8 +262,8 @@ $noti_badge_blue: #2a7ff3;
 // Course cards
 .course-card {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: repeat(auto-fill, minmax(600px, 1fr));
+  grid-auto-rows: 300px;
   grid-gap: 24px;
   margin: 24px;
 }
@@ -408,6 +433,9 @@ $noti_badge_blue: #2a7ff3;
   }
   #nav-btn {
     display: none;
+    &.hidden {
+      // display: block;
+    }
   }
 
   .summary {
