--- a/style_login/style.css
+++ b/style_login/style.css
@@ -1,6 +1,34 @@
+@font-face {
+  font-family: "Quicksand";
+  font-style: normal;
+  font-weight: 100 900;
+  src: url("../Quicksand font 1/static/Quicksand-Medium.ttf");
+}
+@font-face {
+  font-family: "Quicksand-bold";
+  font-style: normal;
+  font-weight: 100 900;
+  src: url("../Quicksand font 1/static/Quicksand-Bold.ttf");
+}
+@font-face {
+  font-family: "Quicksand-semibold";
+  font-style: normal;
+  font-weight: 100 900;
+  src: url("../Quicksand font 1/static/Quicksand-SemiBold.ttf");
+}
+@font-face {
+  font-family: "Quicksand-bold";
+  font-style: normal;
+  font-weight: 100 900;
+  src: url("../Quicksand font 1/static/Quicksand-Bold.ttf");
+}
 #body {
   background-color: #eeeeee;
   font-family: "Quicksand";
+}
+
+.cp {
+  cursor: pointer;
 }
 
 .bold {
@@ -8,7 +36,7 @@
 }
 
 .navbar {
-  background-image: url(/header\ pattern\ image.png);
+  background-image: url(../header\ pattern\ image.png);
 }
 
 #nav-bulb {
@@ -79,6 +107,8 @@
 .each-radio p {
   display: inline;
   margin-bottom: 0px;
+  font-family: "Quicksand-bold";
+  color: #666363;
 }
 
 #form {
@@ -111,12 +141,12 @@
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
-  background-image: url("/icons/arrow-down.svg");
+  background-image: url("../icons/arrow-down.svg");
   background-repeat: no-repeat;
   background-position: 100% center;
 }
 
-.other-inputs {
+.dist-user-pass {
   margin-top: 36px;
 }
 
@@ -124,11 +154,15 @@
   margin-top: 55px;
 }
 
-.forgot-password {
+.forgot-cred {
   display: flex;
-  justify-content: end;
+  justify-content: none;
   align-items: center;
   text-decoration: none;
+  margin-left: auto;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
   text-transform: uppercase;
   color: #1f7a54;
   font-weight: 500;
@@ -148,7 +182,7 @@
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
-  background-image: url("/icons/preview.svg");
+  background-image: url("../icons/preview.svg");
   background-repeat: no-repeat;
   background-position: 100% center;
 }
@@ -168,6 +202,7 @@
   margin-left: 4px;
   margin-bottom: 0px;
   font-weight: 550;
+  color: #666363;
 }
 
 #submit {
@@ -181,9 +216,13 @@
 #sub-button {
   height: 40px;
   width: 216px;
+  padding-top: 8px;
+  text-decoration: none;
+  color: #323232;
   background-color: #3fd28b;
   border: none;
   border-radius: 2px;
+  text-align: center;
   text-transform: uppercase;
   font-weight: 550;
   box-shadow: 0px 5px 5px #dfdede;
