--- a/style_dashboard/style.scss
+++ b/style_dashboard/style.scss
@@ -262,7 +262,7 @@ $noti_badge_blue: #2a7ff3;
 // Course cards
 .course-card {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(600px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
   grid-auto-rows: 300px;
   grid-gap: 24px;
   margin: 24px;
@@ -374,10 +374,8 @@ $noti_badge_blue: #2a7ff3;
 // Footer Css
 
 #footer {
-  display: flex;
+  @include flexCenter();
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
 #foot-div1 {
